--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^0.24.0",
+        "lodash": "^4.17.21",
         "long": "^5.1.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
@@ -18,11 +19,15 @@
         "react-router-dom": "^6.0.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.176",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@vitejs/plugin-react-refresh": "^1.3.1",
+        "autoprefixer": "^10.4.0",
         "electron": "^15.3.0",
         "less": "^4.1.2",
+        "postcss-cli": "^9.0.2",
+        "tailwindcss": "^2.2.19",
         "typescript": "^4.3.2",
         "vite": "^2.4.4"
     }
